--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/agradecimientos.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/agradecimientos.tex
@@ -43,7 +43,19 @@
 
 \cabeceraEspecial{Agradecimientos}
 
-%ACA VAN
+A mi familia que permitió que hoy en día pueda estar cumpliendo este objetivo y sueño personal. A mi padre Carlos que aunque ya no esté físicamente conmigo, fue el gran responsable junto a mi madre para que hoy en día sea lo que soy. Toda la educación, valores y respeto transmitidos por ellos, tanto en lo académico como en la vida misma, fue indispensable para cumplir esta meta. 
+\\
+
+En especial a mi madre Viviana que en los momentos más duros, llevó sola adelante la familia con gran determinación y coraje, continuando con mi educación y la de mis hermanos. Agradecerle por su apoyo incondicional y confianza, brindándome la posibilidad de dedicarme cien por ciento al estudio de la carrera, sin tener que salir a trabajar. 
+\\
+
+A cada una de las personas que componen la Facultad de Ingeniería y Ciencias Hídricas. A todos aquellos profesores que he tenido a lo largo de la carrera, que en mayor o menor medida contribuyeron para mi formación, tanto profesional como personal.
+\\
+
+Por último, quisiera dar las gracias a todos mis amigos que supieron estar conmigo durante esta etapa de mi vida en todos sus aspectos. Muchos de ellos de toda la vida, tantos otros adquiridos a lo largo de los años y durante mi trayecto en la universidad. En especial al grupo de ``Informáticos'' y sus ``Peñas de martes'', los cuales fueron de suma importancia para poder llevar adelante la carrera a la par. Apoyándonos, solidarizándonos y compartiendo conocimientos entre todos, logrando que el objetivo sea más fácil de cumplir.
+\\
+
+Me llevo hermosos recuerdos y anécdotas que perdurarán por siempre, pudiendo decir orgullosamente que estudié en la Facultad de Ingeniería y Ciencias Hídricas de la Universidad Nacional del Litoral.
 
 \newpage
 \thispagestyle{empty}
