--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo0.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo0.tex
@@ -56,7 +56,7 @@ Como se puede ver en la Figura \ref{fig:coverage} se logró llegar a un 85\% de c
 	\end{center}
 \end{figure}
 
-Como ya se ha mencionado anteriormente, el SDK de Android está basado en Java, por lo tanto, también fue posible realizar pruebas unitarias mediante la utilización de JUnit. En este caso el foco principal de testing se basó en la integración de los distintos componentes tanto para la comunicación interna de los eventos en la aplicación como para la externa (comunicación con el WS). La metodología de trabajo es exactamente igual que la realizada anteriormente, colocando distintas entradas en las ejecuciones y evaluando los distintos resultados.
+Como ya se ha mencionado anteriormente, el SDK de Android está basado en Java, por lo tanto, también fue posible realizar pruebas unitarias mediante la utilización de JUnit. En este caso el foco principal de testing se basó en la integración de los distintos componentes tanto para la comunicación interna de los eventos en la aplicación como para la externa (comunicación con el WS). La metodología de trabajo es exactamente igual a la realizada anteriormente, colocando distintas entradas en las ejecuciones y evaluando los distintos resultados.
 
 %-------------------------------------------------------------------
 \section{Pruebas de usuario}
