--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/02Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/02Capitulo1.tex
@@ -43,7 +43,7 @@ En esta sección se presentará todo lo relacionado al gestor de base de datos esc
 Para llevar adelante la gestión de la base de datos se escogió \textit{MySQL}. Es un gestor de bases de datos relacional, considerado como la base de código abierto más popular en el mundo \cite{mysqlPopular} y la segunda más popular a nivel general, detrás de la licencia propietaria de \textit{Oracle} \cite{mysqlRanking}, sobre todo para entornos de desarrollo web.
 \\
 
-MySQL posee un esquema de doble licenciamiento, donde la base de datos se distribuye en varias versiones, una \textit{Community} distribuida bajo la licencia pública general de GNU y varias versiones \textit{Enterprise}, para aquellas empresas que quieran incorporarlo en productos privativos.
+MySQL posee un esquema de doble licenciamiento, donde la base de datos se distribuye en varias versiones, una \textit{Community} distribuida bajo la licencia pública general de GNU\footnote{https://www.gnu.org/home.es.html} y varias versiones \textit{Enterprise}, para aquellas empresas que quieran incorporarlo en productos privativos.
 \\
 
 Se posee gran cantidad de documentación, lo cual es de gran ayuda para resolver cualquier inconveniente que se presente. Este gestor brinda la posibilidad de desarrollar una base de datos de tipo \textit{OLTP} (On Line Transaction Processing), también llamadas bases de datos dinámicas, la cual es acorde al proyecto, ya que permite que la información sea modificada en tiempo real, pudiendo insertar, eliminar, modificar o consultar datos durante la operación del sistema, a diferencia de las bases de datos de tipo \textit{OLAP} (On Line Analytcal Processing) que son estáticas, es decir no se insertan, eliminan, ni modifican datos, sino que solamente se pueden realizar consultas sobre datos ya existentes \cite{tiposDB}.
@@ -71,13 +71,13 @@ En este proyecto se trabajó con la versión Community, en los sistemas operativos
 Una vez definido e instalado el gestor de base de datos escogido, se prosiguió por diseñar el modelo del problema, en donde se desglosa el problema principal en distintas entidades las cuales van a ser representadas por tablas y poseen relaciones entre ellas. El diagrama de tablas de la base de datos se presenta en la Figura \ref{fig:modelobd}.
 \\
 
-Al tratarse de una base de datos del tipo relacional, se puede notar que todas las tablas poseen un \textit{ID} el cual realiza las tareas de clave primaria o primary key (PK). Su funcionalidad es la de identificar en forma única a cada fila de una tabla, por lo que cuenta con el carácter de unicidad. La tabla \textit{Resultado\_Respuesta} es la única que no posee un ID propio, ya que simplemente representa la relación entre dos entidades.
+Al tratarse de una base de datos del tipo relacional, se puede notar que todas las tablas poseen un \textit{ID} el cual realiza las tareas de clave primaria o primary key (PK)\footnote{Representadas en el diagrama por una llave amarilla.}. Su funcionalidad es la de identificar en forma única a cada fila de una tabla, por lo que cuenta con el carácter de unicidad. La tabla \textit{Resultado\_Respuesta} es la única que no posee un ID propio, ya que simplemente representa la relación entre dos entidades.
 \\
 
-Entrando más en detalle del modelo presentado, inicialmente es conveniente realizar una descripción del manejo de usuarios. Para ello se presentan tres tablas \textit{Sexo}, \textit{Tipo\_Usuario} y \textit{Usuario}. La primera resulta de carácter intuitivo, donde simplemente se describe el género de las personas. En la segunda tabla se representa el tipo de usuario que puede adquirir una persona, donde inicialmente se establecieron ``Usuarios Específicos'' y ``Usuarios Comunes'', dejando abierta la posibilidad de introducir un nuevo rol en un futuro. En cuanto a la tercer entidad, almacena todos los datos de los usuarios que van a interactuar con la aplicación. Más allá de poseer un ID como se especificó anteriormente, tiene además otros datos con carácter de unicidad como el DNI, nombre de usuario y mail para mayor seguridad y control de los registros establecidos. 
+Entrando más en detalle del modelo presentado, inicialmente es conveniente realizar una descripción del manejo de usuarios. Para ello se presentan tres tablas \textit{Sexo}, \textit{Tipo\_Usuario} y \textit{Usuario}. La primera resulta de carácter intuitivo, donde simplemente se describe el género de las personas. En la segunda tabla se representa el tipo de usuario que puede adquirir una persona, donde inicialmente se establecieron ``Usuarios Específicos'' y ``Usuarios Comunes'', dejando abierta la posibilidad de introducir un nuevo rol en un futuro. En cuanto a la tercer entidad, almacena todos los datos de los usuarios que van a interactuar con la aplicación. Más allá de poseer un ID como se especificó anteriormente, tiene además otros datos con carácter de unicidad como el DNI, nombre de usuario y mail para mayor seguridad y control de los registros establecidos \footnote{Aquellos datos \textit{not null} se representan en el diagrama mediante un diamante celeste, mientras que los \textit{nullables} se representan mediante un diamante blanco.}. 
 \\
 
-Como se puede ver, esta tabla se relaciona con las dos primeras, es decir cada usuario tiene un género y un tipo. Así es como posee dos claves foráneas o foreign key (FK), es decir una columna de la tabla que se corresponde exactamente con una columna de otra tabla donde está definida como PK para establecer la relación.
+Como se puede ver, esta tabla se relaciona con las dos primeras, es decir cada usuario tiene un género y un tipo. Así es como posee dos claves foráneas o foreign key (FK)\footnote{Representadas en el diagrama por un diamante rosa.}, es decir una columna de la tabla que se corresponde exactamente con una columna de otra tabla donde está definida como PK para establecer la relación.
 \\
 
 Para el modelado de las encuestas que se van a llevar a cabo, se presenta la tabla denominada \textit{Encuesta}. Dentro de los atributos que posee, cabe destacar la diferencia entre ``Activa'' y ``Habilitada''. Al producirse el alta de una de ellas, la misma queda en estado activa (true), pero no estará disponible para ser resuelta por los usuarios hasta que se encuentre habilitada. Además, se llevará a cabo una auditoria de las mismas, registrando qué usuario y en qué fecha realizó algún ABM. Cabe destacar que las eliminaciones o bajas serán del tipo lógico (poniéndolas como activo = false), con la finalidad de no perder los registros y respaldar la auditoría propiamente dicha.
@@ -89,7 +89,7 @@ A su vez, la tabla de encuestas se encuentra relacionada con la entidad \textit{
 A la hora de responder las encuestas, los datos obtenidos serán almacenados en la tabla \textit{Resultado}. Presenta una FK con la entidad Usuario, para determinar quién fue el encargado de la resolución. Si se trata de un usuario común, los atributos edad y sexo serán completados automáticamente por dicha relación, mientras que si se trata de un usuario específico, los datos serán introducidos manualmente a la hora de resolver una determinada encuesta. En cuando al campo ``Descripción respuesta'', se almacenará el texto respondido, si se tratara de preguntas que no poseen respuestas predefinidas como las múltiple choice, por ejemplo.
 \\
 
-Es por ello que las tablas de resultados y respuestas se encuentran relacionadas. Al tratarse de una relación ``Muchos a muchos'' o ``Many to Many'', es decir un resultado puede tener N respuestas y una respuesta estar en M resultados, la relación se almacenará en la tabla \textit{Resultado\_Respuesta}. Dicha entidad contiene solamente un PK compuesto, es decir las FK correspondientes a las dos tablas relacionadas.
+Es por ello que las tablas de resultados y respuestas se encuentran relacionadas. Al tratarse de una relación ``Muchos a muchos'' o ``Many to Many'', es decir un resultado puede tener N respuestas y una respuesta estar en M resultados, la relación se almacenará en la tabla \textit{Resultado\_Respuesta}. Dicha entidad contiene solamente un PK compuesto\footnote{Representado en el diagrama mediante una llave roja.}, es decir las FK correspondientes a las dos tablas relacionadas.
 \\
 
 Por último, se encuentra aislada la tabla \textit{Informacion\_Noticia} en la que se almacenarán todas aquellas noticias e informaciones que se consideren de interés para el resto de los usuarios. Como atributos presentará un título y una descripción (esta última opcional) y una URL que hará referencia al sitio donde se aloja la noticia en sí.
@@ -109,7 +109,7 @@ Una vez definida e implementada la base de datos, en la presente sección se deta
 %-------------------------------------------------------------------
 \label{cap2:subsec:maven}
 
-A la hora de crear el proyecto Java encargado de realizar las funciones de Web Service, se desarrolló el mismo bajo un proyecto del tipo \textit{Maven}. Maven es una herramienta de software para la gestión y construcción de proyectos Java, desarrollada y mantenida por Apache Software Foundation al igual que Tomcat (el contenedor de servlets escogido mencionado anteriormente).
+A la hora de crear el proyecto Java encargado de realizar las funciones de Web Service, se desarrolló el mismo bajo un proyecto del tipo \textit{Maven}. Maven es una herramienta de software para la gestión y construcción de proyectos Java, desarrollada y mantenida por Apache Software Foundation\footnote{https://www.apache.org/} al igual que Tomcat (el contenedor de servlets escogido mencionado anteriormente).
 \\
 
 Tiene un modelo de configuración de construcción basado en un archivo con formato XML. Se trata del \textit{Project Object Model} (POM) que se encarga de describir el proyecto de software a construir, sus dependencias de otros módulos y componentes externos (como por ejemplo la utilización de librerías y frameworks), y el orden de construcción de los elementos.
@@ -119,6 +119,7 @@ Una de las principales características que posee Maven es su capacidad de trabaj
 \\
 
 Mediante las anotaciones realizadas en el POM, Maven automáticamente detecta los cambios y realizan descargas dinámicas de los repositorios, permitiendo no tener que instalar manualmente cada dependencia a utilizar. Como se puede ver en la Figura \ref{fig:estructura-maven}, la cual posee una estructura básica de estos tipos de proyectos, los JAR (Java Archive) se presentan dentro del paquete \textit{Maven Dependencies}, además de ser descargados en una carpeta local oculta.
+\\
 
 \begin{figure}[h!]
 	\begin{center}
@@ -130,6 +131,7 @@ Mediante las anotaciones realizadas en el POM, Maven automáticamente detecta los
 \end{figure}
 
 En el proyecto, esta herramienta sirvió de gran utilidad a la hora de descargar e instalar dependencias externas como frameworks o librerías. Permitió automatizar tareas que desde el punto de vista del desarrollador pueden llegar a demandar mayor tiempo y resultar tediosas. En la figura \ref{fig:maven-pom} se presenta un ejemplo de anotación incluido en el pom.xml para la descarga de un framework.
+\\ 
 
 \begin{figure}[h!]
 	\begin{center}
@@ -205,7 +207,7 @@ En el modelo se pueden ver las relaciones entre las distintas entidades, a travé
 Para llevar adelante el mapeo objeto-relacional, se utilizó el framework \textit{Hibernate}. Es una herramienta ORM para la plataforma Java, que facilita el mapeo de atributos entre una base de datos relacional tradicional y el modelo de objetos de una aplicación, mediante archivos declarativos (XML) o anotaciones en los beans de las entidades que permiten establecer estas relaciones \cite{hibernate1}.
 \\
 
-Busca solucionar el problema de la diferencia entre los dos modelos de datos coexistentes en una aplicación: el usado en la memoria de la computadora (orientación a objetos) y el usado en las bases de datos (modelo relacional). Para lograr esto permite al desarrollador detallar cómo es su modelo de datos, qué relaciones existen y qué forma tienen. Con esta información Hibernate le permite a la aplicación manipular los datos en la base de datos operando sobre objetos, con todas las características de la POO. 
+Este framework busca solucionar el problema de la diferencia entre los dos modelos de datos coexistentes en una aplicación: el usado en la memoria de la computadora (orientación a objetos) y el usado en las bases de datos (modelo relacional). Para lograr esto permite al desarrollador detallar cómo es su modelo de datos, qué relaciones existen y qué forma tienen. Con esta información Hibernate le permite a la aplicación manipular los datos en la base de datos operando sobre objetos, con todas las características de la POO. 
 \\
 
 Hibernate convertirá los datos entre los tipos utilizados por Java y los definidos por SQL. Genera las sentencias SQL y libera al desarrollador del manejo manual de los datos que resultan de la ejecución de dichas sentencias, manteniendo la portabilidad entre todos los motores de bases de datos con un ligero incremento en el tiempo de ejecución \cite{hibernate2}.
@@ -223,11 +225,11 @@ Es necesario establecer el paquete Java que contiene todas las clases a mapear, 
 Todas estas configuraciones y muchas más \footnote{http://hibernate.org/} son llevadas a cabo en un archivo del tipo XML denominado \textit{servlet-context}.
 \\
 
-Para realizar el mapeo ORM, se escogió la técnica de anotaciones en lugar de archivos de mapeos XML, la cual es proporcionada por el framework y denominada ``Hibernate Annotations''.
+Para realizar el mapeo ORM, se escogió la técnica de anotaciones en lugar de archivos de mapeos XML, la cual es proporcionada por el framework y denominada ``Hibernate Annotations''. De esta forma el mapeo es mucho más práctico y se ahorran líneas de códigos, ya que en caso contrario debería anotarse una por una cada clase en el fichero XML, haciendo que la aplicación termine siendo inmanejable en su crecimiento.
 \\
 
 Inicialmente se colocan dos anotaciones a nivel clase muy importantes: en primer lugar se especifica \textbf{\textit{@Entity}}, la cual indica que la clase es una entidad, es decir un objeto Java que puede ser persistido. Seguido a ella se coloca la anotación \textbf{\textit{@Table}}, la cual especifica el nombre de la tabla en base de datos que se debe apuntar.
-\\
+
 \begin{lstlisting}[escapechar=¿]
 	¿\aftergroup\graycolor¿@Entity¿\aftergroup\blackcolor¿ (name = ¿\aftergroup\bluecolor¿"TIPO_USUARIO"¿\aftergroup\blackcolor¿)
 	¿\aftergroup\graycolor¿@Table¿\aftergroup\blackcolor¿ (name = ¿\aftergroup\bluecolor¿"TIPO_USUARIO"¿\aftergroup\blackcolor¿)
@@ -240,6 +242,7 @@ A continuación, se especifican todas las anotaciones de carácter individual, es 
 
 Para indicar cuál atributo de la clase será el identificador, es decir el Primary Key, se utiliza la anotación \textbf{\textit{@Id}}. Seguido a ella, se puede personalizar la forma en que se generará el valor del identificador mediante la anotación \textbf{\textit{@GeneratedValue}}. Existen cuatro estrategias de generación: AUTO, IDENTITY, SEQUENCE y TABLE\footnote{http://docs.jboss.org/hibernate/jpa/2.2/api/javax/persistence/GeneratedValue.html}, donde la primer opción fue la escogida en el proyecto, ya que utiliza la estrategia por defecto de la base de datos. Además, es necesario agregar la anotación \textbf{\textit{@SequenceGenerator}} la cual define un generador de clave primaria que es referenciado por el GeneratedValue.
 \\
+
 \begin{lstlisting}[escapechar=¿]
 	¿\aftergroup\graycolor¿@Id
 	@GeneratedValue¿\aftergroup\blackcolor¿(strategy = GenerationType.¿\aftergroup\bluecolor¿AUTO¿\aftergroup\blackcolor¿, 
@@ -253,7 +256,7 @@ Para indicar cuál atributo de la clase será el identificador, es decir el Primar
 ~\\
 
 Todos aquellos atributos que no estén marcados como \textbf{\textit{@Transient}}, serán persistidos. Para llevar adelante la personalización de la columna de la tabla en un determinado atributo se utiliza la anotación \textbf{\textit{@Column}}. Dentro de ella se puede especificar por ejemplo el nombre de la columna en base de datos, si es una clave única, si puede ser null, etc\footnote{http://docs.jboss.org/hibernate/jpa/2.2/api/javax/persistence/Column.html}.
-\\
+
 \begin{lstlisting}[escapechar=¿]
 	¿\aftergroup\graycolor¿@Column¿\aftergroup\blackcolor¿(name = ¿\aftergroup\bluecolor¿"DNI"¿\aftergroup\blackcolor¿, nullable = ¿\aftergroup\purplecolor¿false¿\aftergroup\blackcolor¿, unique = ¿\aftergroup\purplecolor¿true¿\aftergroup\blackcolor¿)
 	¿\aftergroup\purplecolor¿public¿\aftergroup\blackcolor¿ Integer getDni() {
@@ -263,7 +266,7 @@ Todos aquellos atributos que no estén marcados como \textbf{\textit{@Transient}}
 ~\\
 
 A la hora de mapear las relaciones que se producen entre las entidades, hay que tener en cuenta como se dá la misma para escoger la anotación adecuada. Por ejemplo, en la relación que se encuentra entre la entidad Respuesta y Pregunta, donde la primera tiene una FK sobre la segunda, el mapeo de la misma estará dado mediante la anotación \textbf{\textit{@ManyToOne}}. Dentro de ella se puede especificar entre otras cosas la estrategia para obtener datos de la base de datos, en este caso LAZY, es decir trae la información cuando la necesita. Seguido a esta anotación, se debe colocar \textbf{\textit{@JoinColumn}}, la cual permite unir dos columnas de una tabla con las FK correspondientes.
-\\
+
 \begin{lstlisting}[escapechar=¿]
 	¿\aftergroup\graycolor¿@ManyToOne¿\aftergroup\blackcolor¿(fetch = FetchType.¿\aftergroup\bluecolor¿LAZY¿\aftergroup\blackcolor¿)
 	¿\aftergroup\graycolor¿@JoinColumn¿\aftergroup\blackcolor¿(name = ¿\aftergroup\bluecolor¿"IDPREGUNTA"¿\aftergroup\blackcolor¿)
@@ -277,7 +280,7 @@ En este caso se realizó un mapeo unidireccional, es decir se introdujo la anotac
 \\
 
 Por último, para la asociación entre Respuesta y Resultados, la cual presentaba una tabla extra por tratarse de una relación muchos a muchos, es mapeada bajo la anotación \textbf{\textit{@ManyToMany}}. En este caso se agregará la anotación \textbf{\textit{@JoinTable}} para esta tabla extra, y dentro de ella se encuentra el \textbf{\textit{@JoinColumn}} especificado anteriormente.
-\\
+
 \begin{lstlisting}[escapechar=¿]
 	¿\aftergroup\graycolor¿@ManyToMany¿\aftergroup\blackcolor¿(fetch = FetchType.¿\aftergroup\bluecolor¿LAZY¿\aftergroup\blackcolor¿)
 	¿\aftergroup\graycolor¿@JoinTable¿\aftergroup\blackcolor¿(name = ¿\aftergroup\bluecolor¿"RESULTADO_RESPUESTA"¿\aftergroup\blackcolor¿), 
@@ -333,7 +336,7 @@ En los métodos de programación tradicionales la interacción se expresa de forma 
 
 \begin{figure}[h!]
 	\begin{center}
-		\includegraphics[width=0.8\textwidth]%
+		\includegraphics[width=0.76\textwidth]%
 		{Imagenes/Bitmap/ioc}
 		\caption{Inversión de control}
 		\label{fig:ioc}
@@ -355,7 +358,7 @@ Siguiendo con el modelo de capas establecido, se puede mencionar que Spring pose
 	\label{fig:diagramaws}
 \end{figure}
 
-En la Figura \ref{fig:diagramaws} se puede ver claramente la mencionada separación por capas, de acuerdo a la arquitectura establecida. Siguiendo un flujo de secuencia normal, el usuario ejecuta una consulta desde la aplicación móvil, la cual se encarga de enviar una petición HTTP (\textit{request}) al Web Service. La misma llega al controlador frontal o mejor conocido como \textit{Dispatcher Servlet} que se encarga de enrutarla hacia el controlador indicado, que se encuentra dentro de la capa de presentación. A su vez, el Dispatcher es el encargado de encapsular y abstraer muchas funcionalidades estandarizadas en Spring, mediante la declaración de beans específicos o el uso de anotaciones.
+En la Figura \ref{fig:diagramaws}\footnote{Para visualizar con mayor presición ingresar a: https://ibb.co/8xsw1Ch} se puede ver claramente la mencionada separación por capas, de acuerdo a la arquitectura establecida. Siguiendo un flujo de secuencia normal, el usuario ejecuta una consulta desde la aplicación móvil, la cual se encarga de enviar una petición HTTP (\textit{request}) al Web Service. La misma llega al controlador frontal o mejor conocido como \textit{Dispatcher Servlet} que se encarga de enrutarla hacia el controlador indicado, que se encuentra dentro de la capa de presentación. A su vez, el Dispatcher es el encargado de encapsular y abstraer muchas funcionalidades estandarizadas en Spring, mediante la declaración de beans específicos o el uso de anotaciones.
 \\
 
 Las clases que se encuentran en dicha capa presentan la anotación de carácter general \textbf{\textit{@Controller}}. Corresponde al framework de Spring y sirve para identificar a las clases como tal, ya que son detectadas automáticamente a través del escaneo classpath. Además, se encuentra la anotación \textbf{\textit{@RequestMapping}} que se encarga de definir el path o dirección del recurso.
@@ -505,7 +508,10 @@ Dentro del paquete base se encuentran todas aquellas interfaces y clases genéric
 Por su parte, en el paquete \textit{model} se encuentran todas las clases Java que representan el mapeo de objetos en relación a la base de datos, con sus respectivas anotaciones Hibernate. Las mismas extienden de la clase base \textit{Entity}.
 \\
 
-Cabe aclarar que dentro del paquete \textit{utils}, se desarrolló una clase denominada \textit{EncryptionUtils}. La misma contiene dos funciones para llevar a cabo la codificación y decodificación de un determinado String bajo el sistema \textit{Base64}. Este sistema numérico, utiliza 64 como base que es la mayor potencia de dos que puede ser representada usando únicamente los caracteres imprimibles de ASCII, a la hora de encriptar códigos. Por lo tanto, a la hora de crear un nuevo usuario, cuando se pasa la contraseña a almacenar por el parámetro de la petición, se procede a encriptar la misma como un mecanismo de seguridad a nivel base de datos.
+Cabe aclarar que dentro del paquete \textit{utils}, se desarrolló una clase denominada \textit{EncryptionUtils}. La misma contiene dos funciones para llevar a cabo la codificación y decodificación de un determinado String bajo el sistema \textit{Base64}. Este sistema numérico, utiliza 64 como base que es la mayor potencia de dos que puede ser representada usando únicamente los caracteres imprimibles de ASCII, a la hora de encriptar códigos. 
+\\
+
+Por ejemplo, a la hora de crear un nuevo usuario, cuando se pasa la contraseña a almacenar por el parámetro de la petición, se procede a encriptar la misma como un mecanismo de seguridad a nivel base de datos (quedando almacenado un alfanumérico, por ejemplo \textit{bZOnEJcdujc}). A su vez, utilizando el método de decodificación se puede obtener el texto original.
 
 %------------------------------------------------------------------
 \subsection{Servicios}
